Add data collator

--- a/notebooks/Product-category-classification.ipynb
+++ b/notebooks/Product-category-classification.ipynb
@@ -2818,6 +2818,26 @@
     "train_tokens.set_format(type = \"torch\", columns = columns_to_return)\n",
     "test_tokens.set_format(type = \"torch\", columns = columns_to_return)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa2aaeef",
+   "metadata": {},
+   "source": [
+    "## Data Collator\n",
+    "\n",
+    "This data collator pads input sequences dynamically to match the longest one in each batch. This makes training more efficient compared to padding all inputs to a fixed maximum length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00b5bc5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_collator = DataCollatorWithPadding(tokenizer = tokenizer)"
+   ]
   }
  ],
  "metadata": {
