Add evaluation metrics

--- a/notebooks/Product-category-classification.ipynb
+++ b/notebooks/Product-category-classification.ipynb
@@ -2838,6 +2838,101 @@
    "source": [
     "data_collator = DataCollatorWithPadding(tokenizer = tokenizer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42bd87bf",
+   "metadata": {},
+   "source": [
+    "## Evaluation Metrics\n",
+    "\n",
+    "Several metrics are used to evaluate the model’s performance. Accuracy measures the overall proportion of correct predictions, while precision, recall, and F1 score give insight into how well the model handles each class, especially when the data is imbalanced."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc6d6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d56cfe4e65c41daa41a1621e759d66c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f45ebfd510044ac8801d98afe541cf8f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12ff76979bb94f4091d9f2a6246a49d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e359c4bd57d42f3b20d2dfa0f34fd49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "accuracy_metric = evaluate.load(\"accuracy\")\n",
+    "precision_metric = evaluate.load(\"precision\")\n",
+    "recall_metric = evaluate.load(\"recall\")\n",
+    "f1_metric = evaluate.load(\"f1\")\n",
+    "\n",
+    "\n",
+    "def compute_metrics(pred):\n",
+    "    logits, labels = pred\n",
+    "    predictions = np.argmax(logits, axis = 1)\n",
+    "    acc = accuracy_metric.compute(predictions = predictions, references = labels)\n",
+    "    prec = precision_metric.compute(predictions = predictions, references = labels, average = \"weighted\")\n",
+    "    rec = recall_metric.compute(predictions = predictions, references = labels, average = \"weighted\")\n",
+    "    f1 = f1_metric.compute(predictions = predictions, references = labels, average = \"weighted\")\n",
+    "    return {\n",
+    "        \"accuracy\": acc[\"accuracy\"],\n",
+    "        \"precision\": prec[\"precision\"],\n",
+    "        \"recall\": rec[\"recall\"],\n",
+    "        \"f1\": f1[\"f1\"]\n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
