Add label mapping

--- a/notebooks/Product-category-classification.ipynb
+++ b/notebooks/Product-category-classification.ipynb
@@ -2933,6 +2933,27 @@
     "        \"f1\": f1[\"f1\"]\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a5a168",
+   "metadata": {},
+   "source": [
+    "## Label Mapping\n",
+    "\n",
+    "A reverse mapping from integer IDs back to text labels is created alongside the mapping from labels to IDs. This allows easy conversion between human-readable labels and model-friendly numbers during training and evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaa7b449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id2label = {v: k for k, v in label_mapping.items()}\n",
+    "label2id = label_mapping"
+   ]
   }
  ],
  "metadata": {
