--- a/notebooks/Product-category-classification.ipynb
+++ b/notebooks/Product-category-classification.ipynb
@@ -3694,9 +3694,351 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46295632",
+   "id": "0a600ce8",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Model Inference\n",
+    "\n",
+    "The trained model is used to make predictions on new product descriptions. This step applies the model to real data to get classification results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fa4356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading configuration file /content/drive/MyDrive/Colab_Projects/Product-category-classifier/models/distilBERT/distilBERT-final-model/config.json\n",
+      "Model config DistilBertConfig {\n",
+      "  \"activation\": \"gelu\",\n",
+      "  \"architectures\": [\n",
+      "    \"DistilBertForSequenceClassification\"\n",
+      "  ],\n",
+      "  \"attention_dropout\": 0.1,\n",
+      "  \"dim\": 768,\n",
+      "  \"dropout\": 0.1,\n",
+      "  \"hidden_dim\": 3072,\n",
+      "  \"id2label\": {\n",
+      "    \"0\": \"Electronics\",\n",
+      "    \"1\": \"Household\",\n",
+      "    \"2\": \"Books\",\n",
+      "    \"3\": \"Clothing & Accessories\"\n",
+      "  },\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"label2id\": {\n",
+      "    \"Books\": 2,\n",
+      "    \"Clothing & Accessories\": 3,\n",
+      "    \"Electronics\": 0,\n",
+      "    \"Household\": 1\n",
+      "  },\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"distilbert\",\n",
+      "  \"n_heads\": 12,\n",
+      "  \"n_layers\": 6,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"problem_type\": \"single_label_classification\",\n",
+      "  \"qa_dropout\": 0.1,\n",
+      "  \"seq_classif_dropout\": 0.2,\n",
+      "  \"sinusoidal_pos_embds\": false,\n",
+      "  \"tie_weights_\": true,\n",
+      "  \"torch_dtype\": \"float32\",\n",
+      "  \"transformers_version\": \"4.54.1\",\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading weights file /content/drive/MyDrive/Colab_Projects/Product-category-classifier/models/distilBERT/distilBERT-final-model/model.safetensors\n",
+      "All model checkpoint weights were used when initializing DistilBertForSequenceClassification.\n",
+      "\n",
+      "All the weights of DistilBertForSequenceClassification were initialized from the model checkpoint at /content/drive/MyDrive/Colab_Projects/Product-category-classifier/models/distilBERT/distilBERT-final-model.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use DistilBertForSequenceClassification for predictions without further training.\n",
+      "loading file vocab.txt\n",
+      "loading file added_tokens.json\n",
+      "loading file special_tokens_map.json\n",
+      "loading file tokenizer_config.json\n",
+      "loading file tokenizer.json\n",
+      "loading file chat_template.jinja\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the trained model and the tokenizer\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(MODELS_DIR / \"distilBERT\" / \"distilBERT-final-model\")\n",
+    "tokenizer = DistilBertTokenizer.from_pretrained(MODELS_DIR / \"distilBERT\" / \"distilBERT-final-model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb999aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a classification pipeline\n",
+    "device_num = 0 if torch.cuda.is_available() else -1\n",
+    "pipeline = TextClassificationPipeline(model = model, tokenizer = tokenizer, device = device_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a05cdd90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example input for inference\n",
+    "input_texts = [\n",
+    "    # Electronics\n",
+    "    \"Samsung Galaxy Tab S9 Ultra with 14.6'' AMOLED Display and S Pen\",\n",
+    "    \"Bose QuietComfort Ultra Earbuds – Noise Cancelling, Bluetooth\",\n",
+    "    \"ASUS ROG Zephyrus Gaming Laptop – Ryzen 9, RTX 4070, 1TB SSD\",\n",
+    "\n",
+    "    # Household\n",
+    "    \"iRobot Roomba i7+ Robot Vacuum with Automatic Dirt Disposal\",\n",
+    "    \"Keurig K-Elite Single Serve Coffee Maker – Iced Coffee Option\",\n",
+    "    \"Dyson Pure Cool Link Air Purifier and Fan – WiFi Enabled, HEPA Filter\",\n",
+    "\n",
+    "    # Books\n",
+    "    \"Atomic Habits by James Clear – Build Good Habits & Break Bad Ones\",\n",
+    "    \"The Hobbit by J.R.R. Tolkien – Illustrated Collector’s Edition\",\n",
+    "    \"Introduction to Machine Learning with Python by Andreas C. Müller\",\n",
+    "\n",
+    "    # Clothing\n",
+    "    \"Levi’s Men's 511 Slim Fit Jeans – Stretch Denim, Dark Indigo\",\n",
+    "    \"Nike Women's Dri-FIT Training T-Shirt – Lightweight & Breathable\",\n",
+    "    \"The North Face Men's Thermoball Eco Jacket – Insulated, Packable\",\n",
+    "\n",
+    "    # Accessories\n",
+    "    \"Ray-Ban RB2132 New Wayfarer Sunglasses – Polarized, Classic Black\",\n",
+    "    \"Fossil Women's Leather Wallet with RFID Blocking – Zipper Closure\",\n",
+    "    \"Casio G-Shock Men's Sport Watch – Shock Resistant, Waterproof\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99a73bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/dist-packages/transformers/pipelines/text_classification.py:111: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
+      "  warnings.warn(\n",
+      "You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Input Text: Samsung Galaxy Tab S9 Ultra with 14.6'' AMOLED Display and S Pen\n",
+      "\n",
+      "Top Prediction: Electronics (Confidence: 0.9988)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Electronics: 0.9988\n",
+      "  Books: 0.0006\n",
+      "  Household: 0.0006\n",
+      "  Clothing & Accessories: 0.0001\n",
+      "----------------------------------------\n",
+      "Input Text: Bose QuietComfort Ultra Earbuds – Noise Cancelling, Bluetooth\n",
+      "\n",
+      "Top Prediction: Electronics (Confidence: 0.9988)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Electronics: 0.9988\n",
+      "  Books: 0.0007\n",
+      "  Household: 0.0004\n",
+      "  Clothing & Accessories: 0.0001\n",
+      "----------------------------------------\n",
+      "Input Text: ASUS ROG Zephyrus Gaming Laptop – Ryzen 9, RTX 4070, 1TB SSD\n",
+      "\n",
+      "Top Prediction: Electronics (Confidence: 0.9990)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Electronics: 0.9990\n",
+      "  Books: 0.0006\n",
+      "  Household: 0.0003\n",
+      "  Clothing & Accessories: 0.0001\n",
+      "----------------------------------------\n",
+      "Input Text: iRobot Roomba i7+ Robot Vacuum with Automatic Dirt Disposal\n",
+      "\n",
+      "Top Prediction: Household (Confidence: 0.9996)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Household: 0.9996\n",
+      "  Electronics: 0.0002\n",
+      "  Books: 0.0002\n",
+      "  Clothing & Accessories: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Keurig K-Elite Single Serve Coffee Maker – Iced Coffee Option\n",
+      "\n",
+      "Top Prediction: Household (Confidence: 0.9995)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Household: 0.9995\n",
+      "  Electronics: 0.0003\n",
+      "  Books: 0.0001\n",
+      "  Clothing & Accessories: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Dyson Pure Cool Link Air Purifier and Fan – WiFi Enabled, HEPA Filter\n",
+      "\n",
+      "Top Prediction: Household (Confidence: 0.9996)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Household: 0.9996\n",
+      "  Books: 0.0002\n",
+      "  Electronics: 0.0002\n",
+      "  Clothing & Accessories: 0.0001\n",
+      "----------------------------------------\n",
+      "Input Text: Atomic Habits by James Clear – Build Good Habits & Break Bad Ones\n",
+      "\n",
+      "Top Prediction: Books (Confidence: 0.9999)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Books: 0.9999\n",
+      "  Electronics: 0.0001\n",
+      "  Household: 0.0000\n",
+      "  Clothing & Accessories: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: The Hobbit by J.R.R. Tolkien – Illustrated Collector’s Edition\n",
+      "\n",
+      "Top Prediction: Books (Confidence: 0.9998)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Books: 0.9998\n",
+      "  Household: 0.0001\n",
+      "  Electronics: 0.0001\n",
+      "  Clothing & Accessories: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Introduction to Machine Learning with Python by Andreas C. Müller\n",
+      "\n",
+      "Top Prediction: Books (Confidence: 0.9999)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Books: 0.9999\n",
+      "  Electronics: 0.0001\n",
+      "  Household: 0.0000\n",
+      "  Clothing & Accessories: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Levi’s Men's 511 Slim Fit Jeans – Stretch Denim, Dark Indigo\n",
+      "\n",
+      "Top Prediction: Clothing & Accessories (Confidence: 0.9996)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Clothing & Accessories: 0.9996\n",
+      "  Household: 0.0002\n",
+      "  Books: 0.0001\n",
+      "  Electronics: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Nike Women's Dri-FIT Training T-Shirt – Lightweight & Breathable\n",
+      "\n",
+      "Top Prediction: Clothing & Accessories (Confidence: 0.9992)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Clothing & Accessories: 0.9992\n",
+      "  Books: 0.0005\n",
+      "  Household: 0.0003\n",
+      "  Electronics: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: The North Face Men's Thermoball Eco Jacket – Insulated, Packable\n",
+      "\n",
+      "Top Prediction: Clothing & Accessories (Confidence: 0.9997)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Clothing & Accessories: 0.9997\n",
+      "  Books: 0.0002\n",
+      "  Household: 0.0001\n",
+      "  Electronics: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Ray-Ban RB2132 New Wayfarer Sunglasses – Polarized, Classic Black\n",
+      "\n",
+      "Top Prediction: Clothing & Accessories (Confidence: 0.9996)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Clothing & Accessories: 0.9996\n",
+      "  Books: 0.0002\n",
+      "  Household: 0.0002\n",
+      "  Electronics: 0.0000\n",
+      "----------------------------------------\n",
+      "Input Text: Fossil Women's Leather Wallet with RFID Blocking – Zipper Closure\n",
+      "\n",
+      "Top Prediction: Household (Confidence: 0.9967)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Household: 0.9967\n",
+      "  Books: 0.0018\n",
+      "  Clothing & Accessories: 0.0011\n",
+      "  Electronics: 0.0004\n",
+      "----------------------------------------\n",
+      "Input Text: Casio G-Shock Men's Sport Watch – Shock Resistant, Waterproof\n",
+      "\n",
+      "Top Prediction: Clothing & Accessories (Confidence: 0.9964)\n",
+      "\n",
+      "All Predictions:\n",
+      "\n",
+      "  Clothing & Accessories: 0.9964\n",
+      "  Electronics: 0.0021\n",
+      "  Books: 0.0011\n",
+      "  Household: 0.0004\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_path = (PREDICTIONS_DIR / \"predictions_output.txt\")\n",
+    "\n",
+    "with open(predictions_path, \"w\", encoding = \"utf-8\") as f:\n",
+    "\n",
+    "    def save_predictions(text = \"\"):\n",
+    "        print(text)\n",
+    "        f.write(text + \"\\n\")\n",
+    "\n",
+    "    save_predictions(\"-\" * 40)\n",
+    "\n",
+    "    for text in input_texts:\n",
+    "        save_predictions(f\"Input Text: {text}\\n\")\n",
+    "        predictions = pipeline(text, return_all_scores = True)[0]\n",
+    "        # Sort predictions by score descending\n",
+    "        predictions = sorted(predictions, key = lambda x: x[\"score\"], reverse = True)\n",
+    "        # Extract top prediction\n",
+    "        top_pred = predictions[0]\n",
+    "        save_predictions(f\"Top Prediction: {top_pred['label']} (Confidence: {top_pred['score']:.4f})\\n\")\n",
+    "        # All predictions\n",
+    "        save_predictions(\"All Predictions:\\n\")\n",
+    "        for pred in predictions:\n",
+    "            save_predictions(f\"  {pred['label']}: {pred['score']:.4f}\")\n",
+    "        save_predictions(\"-\" * 40)"
+   ]
   }
  ],
  "metadata": {
